--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
+    "v-contextmenu": "^2.9.0",
+    "vditor": "^3.3.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-runtime-helpers": "^1.1.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
